--- a/Search Algorihm/Linear Search.ipynb
+++ b/Search Algorihm/Linear Search.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "markdown",
    "id": "0827a3be",
    "metadata": {},
-   "source": []
+   "source": [
+    "🧾 Steps of Linear Search Algorithm\n",
+    "\n",
+    "1️⃣ Array-এর প্রথম element থেকে search শুরু করো।\n",
+    "\n",
+    "2️⃣ Current element-এর সাথে key compare করো।\n",
+    "\n",
+    "3️⃣ যদি element == key হয়, তাহলে\n",
+    "    👉 element-এর index return করো এবং search বন্ধ করো।\n",
+    "\n",
+    "4️⃣ যদি element != key হয়, তাহলে\n",
+    "    👉 পরের element-এ যাও।\n",
+    "\n",
+    "5️⃣ Array-এর শেষ পর্যন্ত গিয়েও যদি key না পাওয়া যায়,\n",
+    "    👉 -1 return করো।"
+   ]
   },
   {
    "cell_type": "code",
